--- a/wheel-of-fortune/src/index.css
+++ b/wheel-of-fortune/src/index.css
@@ -54,7 +54,7 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
+    color: #77bdfa;
     background-color: #ffffff;
   }
   a:hover {
